// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-pbehavior Renders \`create-pbehavior\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Create periodical behavior
      </span>
    </div>
     
    <div
      class="text"
    >
      <pbehavior-form-stub
        form="[object Object]"
      />
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Submit
        </div>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-pbehavior Renders \`create-pbehavior\` with pbehavior 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Custom create pbehavior title
      </span>
    </div>
     
    <div
      class="text"
    >
      <pbehavior-form-stub
        form="[object Object]"
        nopattern="true"
      />
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Submit
        </div>
      </button>
    </div>
  </div>
</form>
`;
